j--/tests/fail/Shift.java
package fail;

import java.lang.System;

public class Shift {

	public static void main(String[] args) {
		System.out.println('a' >>> 2);
	}

}
